@@ -2,7 +2,7 @@
 <body bgcolor=white>
 <h2>Dynamic Recipe: Apple Pie</h2> 
 Enter the number of people you're inviting for apple pie:
-<form action=recipe.sml>
+<form method=post action=recipe.sml>
 <input type=text name=persons> 
 <input type=submit value="Compute Recipe">
 </form>
