@@ -1,3 +1,5 @@
+val user = getOpt(Ns.Info.configGetValue{sectionName="ns/parameters", key="user"}, "---")
+val _ =
 Ns.Quot.return `<HTML>
 <BODY bgcolor=lightgreen>
 <h2>Server Information</h2>
@@ -14,10 +16,10 @@ Ns.Quot.return `<HTML>
 </table>
 
 <h2>Connection Information</h2>
-
 <table bgcolor=grey border=1 align=center>
 <tr><th>Host</th>               <td> ^(Ns.Conn.host()) </td></tr>
 <tr><th>Location</th>           <td> ^(Ns.Conn.location()) </td></tr>
+<tr><th>Url</th>                <td> ^(Ns.Conn.url()) </td></tr>
 <tr><th>Peer</th>               <td> ^(Ns.Conn.peer()) </td></tr>
 <tr><th>Peer Port</th>          <td> ^(Int.toString (Ns.Conn.peerPort())) </td></tr>
 <tr><th>Server Port</th>        <td> ^(Int.toString (Ns.Conn.port())) </td></tr>
@@ -52,5 +54,19 @@ Ns.Quot.return `<HTML>
 	 ["file.png", "file.tcl", "file.jpg", "file.dvi", 
 	  "file.pdf", "file.ps", "file.doc", "file.gif"]))
 </table>
+
+<h2>Some Configuration File Information</h2>
+<table bgcolor=grey border=1 align=center>
+<tr><th>ns/parameters debug</th>
+    <td>^(getOpt(Ns.Info.configGetValue{sectionName="ns/parameters", key="debug"}, "none")) </td>
+</tr>
+<tr><th>ns/server/^user directoryfile</th>
+    <td>^(getOpt(Ns.Info.configGetValue{sectionName="ns/server/"^user, key="directoryfile"}, "none")) </td>
+</tr>
+<tr><th>ns/parameters not-there</th>
+    <td>^(getOpt(Ns.Info.configGetValue{sectionName="ns/parameters", key="not-there"}, "none")) </td>
+</tr>
+</table>
+
 </BODY>
 </HTML>`
