@@ -2916,7 +2916,8 @@ struct
 	  let fun member e nil = false
 		| member e (x::xs) = Excon.eq(e,x) orelse member e xs
 	      fun filter (e, acc) =
-	        if member e [Excon.ex_DIV,Excon.ex_MATCH,Excon.ex_BIND,Excon.ex_OVERFLOW] then acc
+	        if member e [Excon.ex_DIV,Excon.ex_MATCH,Excon.ex_BIND,
+			     Excon.ex_OVERFLOW,Excon.ex_INTERRUPT] then acc
 		else e::acc
 	      val (lvars,excons,rhos) = 
 		valOf(!import_vars) 
